--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
         "build": "webpack -p --mode production"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "bootstrap-vue": "^2.12.0",
+        "daterangepicker": "^3.0.5",
         "firebase": "^7.14.2",
         "jquery": "^3.5.0",
+        "moment": "^2.24.0",
         "popper.js": "^1.16.1",
         "vue": "^2.6.11",
         "vue-columns-resizable": "0.0.1",
