--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^2.6.11",
         "vue-columns-resizable": "0.0.1",
         "vue-good-table": "^2.19.1",
+        "vue-js-modal": "^1.3.35",
         "vue-router": "^3.1.3",
         "vue-tables-2": "^2.0.21",
         "vuefire": "^2.2.2"
